--- a/KOSS_AD/switch.css
+++ b/KOSS_AD/switch.css
@@ -1,5 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Arima+Madurai:300');
 
+
+.container{
+  z-index: 1;
+	position: relative;
+	overflow: hidden;
+
+	min-height: 100vh;
+	min-height: 50rem;
+	background-image: url('natural.jpg');
+	background-blend-mode: soft-light;
+	background-size: cover;
+	background-position: center center;
+
+}
+
+
 h1 {
   font-size: 50px;
   padding-left: 15px;
@@ -25,28 +41,12 @@ h1 {
   overflow: hidden;
 }
 
-.container {
-	z-index: 1;
-	position: relative;
-	overflow: hidden;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 100vh;
-	min-height: 35rem;
-	background-image: linear-gradient(to bottom,  rgba(80, 190, 89, 0.6) 0%,rgba(22, 140, 26, 0.6) 100%), 
-  url('https://images.unsplash.com/photo-1446824505046-e43605ffb17f');
-	background-blend-mode: soft-light;
-	background-size: cover;
-	background-position: center center;
-	padding: 2rem;
-}
 
 .toggleSwitch {
-    width: 12em;
-    margin-left: 15rem;
-    margin-top: -20rem;
-    height: 6rem;
+    width: 9em;
+    margin-left: 10rem;
+    margin-top: -10rem;
+    height: 4rem;
     display: block;
     position: relative;
     border-radius: 4rem;
@@ -58,8 +58,8 @@ h1 {
   .toggleSwitch input {display:none;}
   
   .toggleSwitch .toggleButton {
-    width: 4.6rem;
-    height: 4.6rem;
+    width: 3.3rem;
+    height: 3.3rem;
     position: absolute;
     top: 50%;
     left: .5rem;
@@ -74,10 +74,177 @@ h1 {
   }
   
   #toggle:checked ~ .toggleSwitch .toggleButton {
-    left: calc(100% - 5.1rem);
+    left: calc(100% - 3.9rem);
     background: #ffffff;
   }
   
   .toggleSwitch, .toggleButton {
     transition: all 0.2s ease-in;
   }
+
+.text {
+  font-size: 20px;
+  position: absolute;
+  top: 100px;
+  left: 70px;
+
+  animation: motion 1.5s linear 0s infinite alternate;
+}
+
+.click {
+  height: 50px;
+  position: relative;
+  top: 90px;
+  left: 10px;
+
+
+  animation: motion 1.5s linear 0s infinite alternate;
+}
+
+@keyframes motion {
+	0% {margin-top: 0px;}
+	100% {margin-top: 15px;}
+  }
+
+
+ body
+ {
+   margin: 0;
+   padding: 0;
+  
+   font-family: Georgia, 'Times New Roman', Times, serif;
+   overflow-x: hidden;
+ }
+ 
+ a
+ {
+   text-decoration: none;
+   color: #232323;
+   
+   transition: color 0.3s ease;
+ }
+ 
+ a:hover
+ {
+   color: tomato;
+ }
+ 
+ #menuToggle
+ {
+   display: block;
+   position: absolute;
+   top: 50px;
+   right: 50px;
+   
+   z-index: 1;
+   
+   -webkit-user-select: none;
+   user-select: none;
+ }
+ 
+ #menuToggle input
+ {
+   display: block;
+   width: 40px;
+   height: 32px;
+   position: absolute;
+   top: -7px;
+   left: -5px;
+   
+   cursor: pointer;
+   
+   opacity: 0;
+   z-index: 2;
+   
+   -webkit-touch-callout: none;
+ }
+
+ #menuToggle span
+ {
+   display: block;
+   width: 33px;
+   height: 4px;
+   margin-bottom: 5px;
+   position: relative;
+   
+   background: #000000;
+   border-radius: 3px;
+   
+   z-index: 1;
+   
+   transform-origin: 4px 0px;
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               opacity 0.55s ease;
+ }
+ 
+ #menuToggle span:first-child
+ {
+   transform-origin: 0% 0%;
+ }
+ 
+ #menuToggle span:nth-last-child(2)
+ {
+   transform-origin: 0% 100%;
+ }
+ 
+ #menuToggle input:checked ~ span
+ {
+   opacity: 1;
+   transform: rotate(45deg) translate(-2px, -1px);
+   background: #232323;
+ }
+ 
+ #menuToggle input:checked ~ span:nth-last-child(3)
+ {
+   opacity: 0;
+   transform: rotate(0deg) scale(0.2, 0.2);
+ }
+ 
+
+ #menuToggle input:checked ~ span:nth-last-child(2)
+ {
+   opacity: 1;
+   transform: rotate(-45deg) translate(0, -1px);
+ }
+
+ #menu
+ {
+   position: absolute;
+   width: 300px;
+   margin: -100px 0 0 0;
+   padding: 50px;
+   padding-top: 125px;
+   right: -100px;
+   
+   background: #ededed;
+   list-style-type: none;
+   -webkit-font-smoothing: antialiased;
+   
+   transform-origin: 0% 0%;
+   transform: translate(100%, 0);
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+ }
+ 
+ #menu li
+ {
+   padding: 10px 0;
+   font-size: 22px;
+ }
+
+ #menuToggle input:checked ~ ul
+ {
+   transform: none;
+   opacity: 1;
+ }
+ 
+ @media screen and (max-width: 768px) {
+   #menu {
+     transform: none;
+     opacity: 0;
+ 
+     transition: opacity 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+   }
+ }
